# zyn-fx

./: .gitignore  CMakeLists.txt  README.md  config.h.in
cmake/: Dependencies.cmake
src/: imgui_knob.cpp  imgui_knob.h  instrumentmain.cpp  minimal.h  vstcontrol.cpp  vstcontrol.h  zyn.alienwah.cpp  zyn.alienwah.h  zyn.all-in-one.cpp  zyn.all-in-one.h  zyn.chorus.cpp  zyn.chorus.h  zyn.distorsion.cpp  zyn.dynamicfilter.cpp  zyn.dynamicfilter.h  zyn.echo.cpp  zyn.eq.cpp  zyn.phaser.cpp  zyn.reverb.cpp
src/DSP/: AnalogFilter.cpp  FormantFilter.cpp  SVFilter.cpp  Unison.cpp
src/Effects/: Alienwah.cpp  Alienwah.h  Chorus.cpp  Chorus.h  Distorsion.cpp  Distorsion.h  DynamicFilter.cpp  DynamicFilter.h  EQ.cpp  EQ.h  Echo.cpp  Echo.h  Effect.cpp  Effect.h  EffectLFO.h  EffectMgr.cpp  EffectMgr.h  EffectPresets.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h
src/Misc/: Config.cpp  Util.cpp  Util.h
src/Params/: FilterParams.cpp  FilterParams.h  Presets.h  PresetsArray.h  PresetsStore.h
